# openaerostruct-llm-agent

./: .env.example  .gitignore  Agents.py  LICENSE  OpenAeroStruct.ipynb  RAG_Embedding.py  RAG_Retrieval.py  README.md  RunOAS.py  RunOAS_template.py  geminiconfig.py  output.txt  pyproject.toml
.github/workflows/: codeql.yml
Backups/: RunOAS.py  RunOAS2.py  UnusedCode.ipynb
Backups/RunOAS2_out/reports/: driver_scaling_report.html  inputs.html  n2.html  opt_report.html
Backups/RunOAS_out/reports/: driver_scaling_report.html  inputs.html  n2.html  opt_report.html
Figures/: .gitignore  Report.aux  Report.fdb_latexmk  Report.fls  Report.tex
RunOAS_out/reports/: driver_scaling_report.html  inputs.html  n2.html  opt_report.html
benchmark_run_out/reports/: driver_scaling_report.html  inputs.html  n2.html  opt_report.html
docker/: sandbox.Dockerfile  seccomp-openaerostruct.json
openaerostruct-llm/: .gitignore  OpenAeroStruct.ipynb  RunOAS.py  RunOAS_template.py  RunOAS_template_aerostructural.py  run_openaerostruct.py
openaerostruct-llm/figures/: .gitignore  Opt_History.tex  Report.tex
openaerostruct-llm/llm_functions/: agents.py  agents_aerostructural.py  gemini_config.py  ollama_config.py
openaerostruct-llm/report_outputs/: .gitignore
src/: agent_logic.py  app.py  benchmark.py  benchmark_run.py  generated_run.py
src/blueprints/: aero_analysis.py  aero_multipoint.py  aero_opt.py  aero_rect.py  aerostruct_multipoint.py  aerostruct_tube.py  aerostruct_wingbox.py  agent_plotting.py  custom_mesh.py  multi_section_aero.py  multi_section_aerostructural.py  multiple_lifting_surfaces.py  plot_wing.py  plotting.md  skills.md  stability_derivatives.py  struct_optimization.py
src/blueprints_in_progress/: aerostruct_multipoint.py  agent_plotting.py  custom_mesh.py  multi_section_aero.py  multi_section_aerostructural.py  multiple_lifting_surfaces.py  stability_derivatives.py
src/llm/: coder.md  coder.py  config.py  relaxer.md  relaxer.py  router.py  skills.md
src/tools/: benchmark.py  db_reader.py  executor.py  t.py  test_queries.csv
