[project]
name = "agentic-openaerostruct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "google-genai>=1.56.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "ollama>=0.6.1",
    "openaerostruct",
    "openmdao>=3.38.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.56.0",
]

[tool.uv.sources]
openaerostruct = { git = "https://github.com/ConanLee918/OpenAeroStruct.git", branch = "auto-plot-save" }
